--- a/index.html
+++ b/index.html
@@ -155,7 +155,7 @@
 						<h2>Research</h2>
 						<p>Investigating the Impact of Climate Change on New York State's Lakes</p>
 					</header>
-					<p>In the 21st century, climate change poses a significant threat to New York State's natural resources, including over 3000 lakes and their watersheds. My research focuses on understanding and mitigating these impacts, particularly in the Adirondack Park. I utilize Landsat 5 and 7 to extract water quality data, applying cloud filters from Google Earth Engine and integrating extensive in-situ data to validate satellite observations of Colored Dissolved Organic Matter (CDOM). My current work involves leveraging varied atmospheric correction algorithms and machine learning to predict CDOM and assess water quality changes. Tools and skills used include Python, JavaScript, Landsat Level 2 data, Google Earth Engine, ENVI, SNAP, QGIS, and Excel for data visualization, along with various machine learning algorithms like Random Forest Regression.</p>
+					<p>In the 21st century, climate change poses a significant threat to New York State's natural resources, including over 3000 lakes and their watersheds. My research focuses on understanding and mitigating these impacts, particularly in the Adirondack Park. I utilize Landsat 5 and 7 to extract water quality data and integrating extensive in-situ data to validate satellite observations of Colored Dissolved Organic Matter (CDOM). My current work involves leveraging varied atmospheric correction algorithms and machine learning to predict CDOM and assess water quality changes. Tools and skills used include Python, JavaScript, Landsat Level 2 data, Google Earth Engine, ENVI, SNAP, QGIS, and Excel for data visualization, along with various machine learning algorithms like Random Forest Regression.</p>
 					<ul class="actions">
 						<li><a href="https://github.com/aisha1021/NSF_REU_2023_2025_Research.git" class="button" target="_blank">Learn More</a></li>
 					</ul>
@@ -171,7 +171,7 @@
 						<h3>Publications & Presentations:</h3>
 						<ul>
 							<li> <em>Analysis Of Dissolved Organic Content And Water-Color Trends In The Adirondacks Using Satellite Remote Sensing</em> at The American Geophysical Union (AGU) 2023 National Conference and Celebrating Research Excellence Symposium at CityTech</li>
-							<li> <em>Assessment of Inland Lake Water Color and Dissolved Organic Content via Satellite-Based Machine Learning</em> at The 2024 Emerging Researchers National (ERN) Conference, The 2023 Mathematical Association of America (MAA) Conference, and The 2023 Janet Liou-Mark Research Scholars Poster Presentation</li>
+							<li> <em>Assessment of Inland Lake Water Color and Dissolved Organic Content via Satellite-Based Machine Learning</em> at The 2024 Emerging Researchers National (ERN) Conference and The 2023 Mathematical Association of America (MAA) Conference</li>
 							<li> <em>Satellite-Based Analysis of Water-Color and Dissolved Organic Content Within Inland Lakes</em> at The American Meteorological Society (AMS) National Conference (104th Annual Meeting)</li>
 						</ul>
 						<h3>Awards:</h3>
