--- a/index.html
+++ b/index.html
@@ -73,8 +73,8 @@
 				<div class="content">
 				  <header>
 					<h2>Aisha Malik</h2>
-					<p>I aspire to become a leading AI software engineer and machine<br />
-					  learning expert, transforming ideas into reality.</p>
+					<p>I aspire to become a leading Machine Learning Engineer and <br />
+					  AI Software Engineer, transforming ideas into reality.</p>
 				  </header>
 				  <span class="image"><img src="images/20240420_132404.jpg" alt="Aisha Malik" /></span>
 				</div>
@@ -176,7 +176,7 @@
 						</ul>
 						<h3>Awards:</h3>
 						<ul>
-							<li>1st Place at the Emerging Researchers National (ERN) Conference for the presentation on satellite-based machine learning predictions of CDOM (also recieved Travel Award).</li>
+							<li>1st Place at the Emerging Researchers National (ERN) Conference for the presentation on satellite-based machine learning predictions of CDOM (also received Travel Award).</li>
 							<li>Awarded the AMS poster presentation award for outstanding research on satellite-based analysis of water quality.</li>
 						</ul>
 					<ul class="actions">
